<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/app_bar_layout_no_tabs">
    </include>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        tools:context=".DetailsActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvTitleDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="24sp"
                android:textColor="#000000"
                android:text="@string/movie_details_title"/>
            <CheckBox
                android:id="@+id/btnFav"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:button="@null"
                android:checked="false"
                android:background="@drawable/star_icon"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/movie_details_duration"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <ImageView
                android:id="@+id/ivPosterDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_background"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/movie_details_genre"/>
                <TextView
                    android:id="@+id/tvDateReleased"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/movie_details_date"/>
                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/movie_details_rating"/>

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>

